Bug 425732 - "Show QR Codes" do not working, no QR Codes in the preview of contact
Summary: "Show QR Codes" do not working, no QR Codes in the preview of contact
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: contacts (other bugs)
Version First Reported In: 5.15.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-24 04:14 UTC by willeben
Modified: 2020-08-25 06:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.1
Sentry Crash Report:


Attachments
Kontact-Show_QR_Codes-Do_not_work (157.34 KB, image/png)
2020-08-24 04:14 UTC, willeben
Details

Note You need to log in before you can comment on or make changes to this bug.
Description willeben 2020-08-24 04:14:18 UTC
Created attachment 131138 [details]
Kontact-Show_QR_Codes-Do_not_work

SUMMARY
Since from March,2020, updated of the new version,choosen "Show QR Codes" function, there is no display of QRCode in the preview of contact anymore,it's just an small white empty paper logo. 

before update of kontact "KDE Applications 19.12.3 revision 42" or "KDE release 20.04.0 revision 43", the "Show QR Codes" is working properly.

STEPS TO REPRODUCE
1.reboot computer,login openSUSE Tumbleweed,start "Kontact"
2.open menu "View",choose or cancel menu "Show QR Codes" function
3. there is no display of QRCode in the preview of contact

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2020-08-24 06:49:23 UTC
I confirm it.
Comment 2 Laurent Montel 2020-08-25 06:18:27 UTC
Git commit 7c3ff797637e57204c46b03b84772298c8c1f763 by Laurent Montel.
Committed on 25/08/2020 at 06:17.
Pushed by mlaurent into branch 'release/20.08'.

Fix Bug 425732 - "Show QR Codes" do not working, no QR Codes in the preview of contact
FIXED-IN: 5.15.1

M  +3    -1    src/akonadi-contacts/contactviewer.cpp

https://invent.kde.org/pim/akonadi-contacts/commit/7c3ff797637e57204c46b03b84772298c8c1f763