Fix Bug 425732 - "Show QR Codes" do not working, no QR Codes in the preview of contact

BUG: 425732
FIXED-IN: 5.15.1